# rsmatrix

./: Cargo.toml  README.md  license.txt
src/: charset_gen.rs  main.rs
