[package]
name = "rsmatrix"
version = "0.1.0"
authors = ["Violet white <Violet.white.dammit@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.2"
rand = "0.7"
lazy_static = "1.4.0"
terminal_size="0.1.8"
unicode-width = "0.2.1"